logs/dag_id=django_etl_monitor/run_id=manual__2025-06-19T105059.691454+0000/task_id=run_etl_from_django/attempt=1.log
[2025-06-19T10:51:00.827+0000] {taskinstance.py:1979} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: django_etl_monitor.run_etl_from_django manual__2025-06-19T10:50:59.691454+00:00 [queued]>
[2025-06-19T10:51:00.834+0000] {taskinstance.py:1979} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: django_etl_monitor.run_etl_from_django manual__2025-06-19T10:50:59.691454+00:00 [queued]>
[2025-06-19T10:51:00.835+0000] {taskinstance.py:2193} INFO - Starting attempt 1 of 1
[2025-06-19T10:51:00.847+0000] {taskinstance.py:2214} INFO - Executing <Task(PythonOperator): run_etl_from_django> on 2025-06-19 10:50:59.691454+00:00
[2025-06-19T10:51:00.851+0000] {standard_task_runner.py:60} INFO - Started process 66 to run task
[2025-06-19T10:51:00.854+0000] {standard_task_runner.py:87} INFO - Running: ['***', 'tasks', 'run', 'django_etl_monitor', 'run_etl_from_django', 'manual__2025-06-19T10:50:59.691454+00:00', '--job-id', '58', '--raw', '--subdir', 'DAGS_FOLDER/django_etl_monitor.py', '--cfg-path', '/tmp/tmptyk4ljbr']
[2025-06-19T10:51:00.855+0000] {standard_task_runner.py:88} INFO - Job 58: Subtask run_etl_from_django
[2025-06-19T10:51:00.918+0000] {task_command.py:423} INFO - Running <TaskInstance: django_etl_monitor.run_etl_from_django manual__2025-06-19T10:50:59.691454+00:00 [running]> on host 78d664e26a7a
[2025-06-19T10:51:00.985+0000] {taskinstance.py:2510} INFO - Exporting env vars: AIRFLOW_CTX_DAG_OWNER='***' AIRFLOW_CTX_DAG_ID='django_etl_monitor' AIRFLOW_CTX_TASK_ID='run_etl_from_django' AIRFLOW_CTX_EXECUTION_DATE='2025-06-19T10:50:59.691454+00:00' AIRFLOW_CTX_TRY_NUMBER='1' AIRFLOW_CTX_DAG_RUN_ID='manual__2025-06-19T10:50:59.691454+00:00'
[2025-06-19T10:51:01.023+0000] {taskinstance.py:2728} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/models/taskinstance.py", line 444, in _execute_task
    result = _execute_callable(context=context, **execute_callable_kwargs)
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/models/taskinstance.py", line 414, in _execute_callable
    return execute_callable(context=context, **execute_callable_kwargs)
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/operators/python.py", line 200, in execute
    return_value = self.execute_callable()
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/operators/python.py", line 217, in execute_callable
    return self.python_callable(*self.op_args, **self.op_kwargs)
  File "/opt/airflow/dags/django_etl_monitor.py", line 73, in run_etl_from_conf
    cur.execute(f"SELECT {', '.join(select_clause)} FROM {source_table}")
psycopg2.errors.SyntaxError: syntax error at or near "["
LINE 1: SELECT id, [{"column":"id","expression":"id"},{"column":"nam...
                   ^

[2025-06-19T10:51:01.043+0000] {taskinstance.py:1149} INFO - Marking task as FAILED. dag_id=django_etl_monitor, task_id=run_etl_from_django, execution_date=20250619T105059, start_date=20250619T105100, end_date=20250619T105101
[2025-06-19T10:51:01.060+0000] {standard_task_runner.py:107} ERROR - Failed to execute job 58 for task run_etl_from_django (syntax error at or near "["
LINE 1: SELECT id, [{"column":"id","expression":"id"},{"column":"nam...
                   ^
; 66)
[2025-06-19T10:51:01.067+0000] {local_task_job_runner.py:234} INFO - Task exited with return code 1
[2025-06-19T10:51:01.085+0000] {taskinstance.py:3309} INFO - 0 downstream tasks scheduled from follow-on schedule check
